fix background image overlap, by adding additional div and adding stacking context to main element

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,9 +1,21 @@
 .main {
+  padding-inline: 1rem;
+  margin-block: 1.5rem;
+  isolation: isolate;
   display: flex;
   flex-direction: column;
 }
 
 .main > :first-child {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6));
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  inset: 0;
+  z-index: -1;
+}
+
+.main > :nth-child(2) {
   animation: drop-in 0.5s ease-in-out;
 }
 
